# QScintilla_src-2.14.1

./: .gitignore  CMakeLists.txt  README.md
scintilla/include/: Platform.h
src/: CMakeLists.txt
